@@ -70,6 +70,7 @@ NEW:
 		Added the submarine detection ability to Submarines and Missile Subs.
 		Increased the submarine detection range of Gunboat from 3 to 4.
 		Fixed Spies having an enemy color health bar when disguised as a friendly unit (occurred using the Team Health Colors setting).
+		Chrono Tanks can now be teleported in groups by holding SHIFT or ALT and issuing a move order.
 	Tiberian Dawn:
 		Chinook rotors now counter-rotate.
 		Commando can now plant C4 on bridges.
@@ -122,6 +123,8 @@ NEW:
 		Added IEffectiveOwner interface for traits/logic that temporarily alter an actor's apparent owner.
 		Renamed Spy trait to Disguise, SpyToolTip trait to DisguiseToolTip, and RenderSpy trait to RenderDisguise.
 		Overhauled the internal map management and preview generation code.
+		Modified Teleport activity to use the best/closest open cell to the target destination for teleports (for ChronoshiftPower this only applies on the return trip).
+		Renamed ChronoshiftDeploy trait to PortableChrono.
 	Server:
 		Message of the day is now shared between all mods and a default motd.txt gets created in the user directory.
 	Asset Browser:
